# dominance-frontier

./: .clang-tidy  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: clang-format-check.yaml
cmake/: functions.cmake
examples/: 1.in
include/: Dominators.h  ReducibleGraph.h  Tree.h  Utils.h  driver.h  header.h  reducible-graph.h
nix/: treefmt.nix
src/: Dominators.cc  ReducibleGraph.cc  main.cc  parser.y  scanner.l
